<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverSignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/btnBlack"
        android:gravity="center_horizontal"
        android:text="@string/driver_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:id="@+id/textInputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginSignUpButton"
        android:onClick="loginSignUpUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/btnBlack"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/toggleLoginSignUpTextView"
        android:onClick="toggleLoginSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16sp"
        android:background="@color/btnBlack"
        android:clickable="true"
        android:text="@string/tap_to_log_in"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:focusable="true" />

</LinearLayout>