<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseModActivity">

    <ImageView
        android:src="@drawable/label_taxi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center_horizontal"
            android:text="@string/taxi_app"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold|italic" />


        <Button
            android:id="@+id/passengerButton"
            android:onClick="goToPassengerSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@color/purple_800"
            android:text="@string/for_passenger"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/driverButton"
            android:onClick="goToDriverSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btnBlack"
            android:text="@string/for_driver"
            android:textAllCaps="false"
            android:textColor="@color/purple_800"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/black" />


    </LinearLayout>

</FrameLayout>