<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PassengerMapsActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topButtonsLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/settingsBtn"
            android:background="@color/purple_800"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/btnBlack"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/btnBlack"
            android:textStyle="bold|italic"
            android:background="@color/purple_800"
            android:text="@string/sign_out"
            />




    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_below="@+id/topButtonsLayout"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/bookTaxiBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_800"
        android:text="@string/book_taxi"
        android:textAllCaps="false"
        android:textColor="@color/btnBlack"
        android:textStyle="bold|italic" />


</RelativeLayout>
